fix(eval): stop scoring absent expectations as perfect
All three scorers returned 1.0 when the corresponding expectation was empty
or null. A case with no expected rules, no expert answer and no expected tool
calls therefore recorded an overall score of 1.0, and every unlabelled case
added to the suite raised the average. The metric rewarded incomplete cases.

RuleAccuracyScorer had a second, worse problem. It tested
actualOutput.toString().contains(ruleId) over the entire response map, and
that map contains the citations block whose entries carry source_id equal to
the rule ID. Retrieving a rule was therefore scored as having applied it: a
system that retrieved everything and reasoned about nothing scored perfectly.
The metric measured retrieval recall while being reported as decision
accuracy.

ExpertAlignmentScorer matched keywords against the same whole-response
string, so the retrieved rule text and the echoed order counted as the
model's own words and common terms matched trivially.

ToolExecutionScorer matched on the step's display label - a Chinese phrase
such as "查询订单详情" - which meant renaming a label silently broke every
expectation, and a case had to encode presentation text to state a
behavioural requirement. It also counted failed tool calls as satisfied.

Changes:

- Scorers return OptionalDouble. Empty means "not measured for this case".
- EvalScore fields stay null for unmeasured metrics and overallScore is the
  mean of the present ones only, or null when nothing was measured.
- Rule IDs are read from model_analysis.applicable_rules and
  matched_rules[].rule_id - the fields that represent a decision. Citations
  are explicitly not consulted.
- Expert alignment compares model_analysis.primary_cause directly when
  present, and otherwise falls back to term overlap against
  model_raw_output only, never against retrieved evidence.
- Tool execution matches StepExecution.toolName and requires the step to
  have succeeded.

These scorers remain crude lex